umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_mol3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 29
sum_formula: C21NO4
graph6: YhEH?C@CGA?@?@?G_@??@??C?CG??O??C??O???GG?????@A???????_
