umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_pubchem-1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 30
sum_formula: C9H17NO4
graph6: ^??KGOGA?CK@c???__?G??_?@??A??A???_??G??@???A???C???C???@????O????O???@????A???
