umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_render_heavy_atoms_2150.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 17
bond_count: 9
sum_formula: C9CnFlLvMcNhOgRgTs
graph6: "P`?G?C??G??@????_???@C??"
