umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_sphere.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 60
bond_count: 90
sum_formula: C60
graph6: "{sP@@?OCOS@?@G@@?O?A??G??O??O??G??A???O??@C??E???C???AG??@_???GC???o???@????@_????_G???G????@?????C?_???G?????G?????C?_???@??????G@?????_?????@?G????@_?????@@??????G??????@_??????GO??????GC??????C???????@?_??????O???????A@???????GG???????O????????OG???????GG???????AO????????O_????????Q?????????F"
