umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_sphere_mod1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 68
bond_count: 100
sum_formula: C68
graph6: "~?@Cs`AA?_G?_AAA?@G?_?CO?_G@A?@???_??G??@???C???G???G???C???@????G????`???B????A????@A????o????C?_???O?????o?????_?????W?????C?O????_O????A??????C??????C?G????A???????_??????C?G?????G???????O@??????O???????G?_?????@_???????OO???????_???????@_???????AC????????_O???????C?????????OG???????@?????????A@????????AA????????@??????????OG????????AA?????????H??????????O_?????????C_??????????["
